# dasan-chat

./: .gitignore  README.md  render.yaml
server/: .env.example  .gitignore  README.md  pyproject.toml  run.ps1
server/src/dasan_chat/: __main__.py  api.py  app.py  config.py  disconnect.py  persona.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: index.css  main.tsx
ui/src/components/: Character.tsx  MusicToggle.tsx
ui/src/lib/: api.ts  audio-player.ts  audio-recorder.ts  bgMusic.ts  gemini-live-direct.ts  heygen-avatar.ts  live-ws.ts  persona-prompt.ts  wav.ts
ui/src/routes/: Intro.tsx  Landing.tsx  RootLayout.tsx  Sarangchae.tsx  Seojae.tsx
ui/src/store/: audio.ts  chat.ts
