[project]
name = "dasan-chat-server"
version = "0.1.0"
description = "다산초당 정약용 챗봇 — 강진중앙초등학교 학급용 (학습용 채팅 + Gemini Live 음성)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dasan_chat"]
